--- a/src/main/webapp/wallDemo.html
+++ b/src/main/webapp/wallDemo.html
@@ -1,13 +1,7 @@
-<%--
-  Created by IntelliJ IDEA.
-  User: buxiaofeng
-  Date: 17/2/28
-  Time: 下午8:38
-  To change this template use File | Settings | File Templates.
---%>
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>图片墙样例</title>
     <style type="text/css">
         *{padding: 0;margin: 0}
@@ -28,7 +22,6 @@
             background-color: #333;
             overflow: hidden;
         }
-        /*海报样式*/
         .photo{
             width:260px;
             height: 320px;
@@ -40,12 +33,13 @@
             width: 100%;
             height:100%;
             background-color: #eee;
+            position: absolute;
             top:0;
             right:0;
             padding: 20px;
             box-sizing: border-box;
         }
-        .photo .side-front{display: none}
+        .photo .side-front{}
         .photo .side-front .image{
             width:100%;
             height: 250px;
@@ -61,6 +55,7 @@
             line-height: 50px;
         }
         .photo .side-back{
+            display: none;
             color: #666;
             font-size: 14px;
             line-height: 1.5em;
@@ -68,18 +63,17 @@
     </style>
 </head>
 <body>
-    <div class="wrap">
-        <div class="photo">
-            <div class="side side-front">
-                <p class="image"><img src="content/images/demo/timg.jpg"></p>
-                <p class="caption">测试图片</p>
-            </div>
-            <div class="side side-back">
-                <p class="desc">描述</p>
-            </div>
+<div class="wrap">
+    <div class="photo">
+        <div class="side side-front">
+            <p class="image"><img src="content/images/demo/test.jpg"></p>
+            <p class="caption">测试图片</p>
+        </div>
+        <div class="side side-back">
+            <p class="desc">描述</p>
         </div>
     </div>
+</div>
 
-    <script src="content/js/jquery-2.2.3.min.js"></script>
 </body>
 </html>
